--- a/portuguese/contato.html
+++ b/portuguese/contato.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../img/logocp1.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Home</title>
+    <title>Contato</title>
 </head>
 <body>
     <div class="container-fluid p-0 m-0">
